kubernetes/03-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: rancher-demo
  name: rancher-service
  labels:
    app: rancher-demo
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: rancher-demo
  type: LoadBalancer
  externalIPs:
  - 192.0.0.1
