kubernetes/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: rancher-demo
  name: rancher-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rancher-service
            port:
              number: 8080
